# TEPPEN-MEO

./: .gitignore  dev_todo.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cursor/rules/: globals.mdc  nextauth-yahoo.mdc
.cursor/rules/dev-rules/: django.mdc  techstack.mdc  uiux.mdc
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/src/backend/: __init__.py  main.py
backend/src/backend/models/: __init__.py  base.py  oauth_token.py  user.py
docs/: architecture.md  db_schema.md
front/: Dockerfile
