[tool.poetry]
name = "backend"
version = "0.1.0"
description = "TEPPEN MEO Backend API"
authors = ["knomura03 <knomura@cyder.studio>"]
readme = "README.md"
packages = [{include = "backend", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11"
fastapi = ">=0.115.12,<0.116.0"
uvicorn = {extras = ["standard"], version = ">=0.34.2,<0.35.0"}
celery = ">=5.5.2,<6.0.0"
redis = ">=6.1.0,<7.0.0"
sqlalchemy = ">=2.0.41,<3.0.0"
psycopg = {extras = ["binary"], version = ">=3.2.9,<4.0.0"}
pendulum = ">=3.1.0,<4.0.0"
httpx = ">=0.28.1,<0.29.0"

[tool.poetry.group.dev.dependencies]
# pytest = "^7.0"
# ruff = "^0.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
